<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">点评</string>
    <string name="comment_support">由点评科技提供技术支持</string>
    <string name="login_account_hint">请输入手机号码</string>
    <string name="login_account_input_please">请输入手机号码</string>
    <string name="login_pwd_hint1">请输入密码</string>
    <string name="login_old_pwd_hint">请输入登录密码</string>
    <string name="login_pwd_hint">请输入新密码</string>
    <string name="login_pwd_hint_agin">请再次确认新密码</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="mine_collections">我的收藏</string>
    <string name="forget_the_password">忘记密码？</string>
    <string name="register_pwd_hint">请输入8~16未密码</string>
    <string name="user_register">用户注册</string>
    <string name="register_now">马上注册</string>
    <string name="please_wait" tools:ignore="TypographyEllipsis">请稍候...</string>
    <string name="main_home_page">首页</string>
    <string name="main_me">我的</string>
    <string name="dynamic">动态</string>
    <string name="discovery">发现</string>
    <string name="click_see_more">点击查看更多内容</string>
    <string name="loading" tools:ignore="TypographyEllipsis">正在加载中...</string>
    <string name="load_success">加载完成</string>
    <string name="load_fail">加载失败！</string>
    <string name="no_data_more_hint">没有更多数据</string>
    <string name="shenzhen">深圳</string>
    <string name="cate">美食</string>
    <string name="periphery_tourism">周边旅游</string>
    <string name="hotel_accommodations">酒店住宿</string>
    <string name="health_care">健康医疗</string>
    <string name="recommended">为您推荐</string>
</resources>
