<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fm_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_above="@+id/btm_tabs"/>


    <LinearLayout
        android:id="@+id/btm_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <View style="@style/DividerHorizontal" />

        <com.comment.tek.widget.buttomIndictor.DMTabHost
            android:id="@+id/tab_host"
            android:layout_width="match_parent"
            android:layout_height="47dip"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <com.comment.tek.widget.buttomIndictor.DMTabButton
                android:id="@+id/bt0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/main_tab_one_rb_selector"
                app:tabText="@string/main_home_page"/>

            <com.comment.tek.widget.buttomIndictor.DMTabButton
                android:id="@+id/bt1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/main_tab_two_rb_selector"
                app:tabText="@string/discovery"/>

            <com.comment.tek.widget.buttomIndictor.DMTabButton
                android:id="@+id/bt2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/main_tab_three_rb_selector"
                app:tabText="@string/dynamic"/>

            <com.comment.tek.widget.buttomIndictor.DMTabButton
                android:id="@+id/bt3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/main_tab_four_rb_selector"
                app:tabText="@string/main_me"/>
        </com.comment.tek.widget.buttomIndictor.DMTabHost>
    </LinearLayout>
</RelativeLayout>