<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/shape_bottom_gray_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/shenzhen" />

        <com.comment.tek.widget.ClearWriteEditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_home_page_search"
            android:gravity="center_vertical"
            android:hint="深圳周边"
            android:paddingStart="15dp"
            android:textColor="@color/c_666666"
            android:textSize="@dimen/sp_14"
            tools:ignore="HardcodedText,RtlSymmetry" />
    </LinearLayout>


    <com.comment.banner.view.Banner
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/banner2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:indicator_drawable_selected="@color/c_5CB85C"
        app:indicator_drawable_unselected="@color/white"
        app:indicator_height="4dp"
        app:indicator_margin="4dp"
        app:indicator_width="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/cate"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/periphery_tourism"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/hotel_accommodations"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/health_care"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/cate"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/periphery_tourism"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/hotel_accommodations"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/main_home_page"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/recommended"
        android:textSize="@dimen/sp_12" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/cate"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/cate"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:drawableTop="@mipmap/ic_account"
            android:gravity="center"
            android:text="@string/cate"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>
</LinearLayout>

