<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/ic_login_logo"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_border_gray_shape"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_account"
            tools:ignore="ContentDescription" />

        <AutoCompleteTextView
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="50dp"
            android:layout_toEndOf="@+id/icons"
            android:background="@null"
            android:completionThreshold="1"
            android:hint="@string/login_account_hint"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/c_999999"
            android:textSize="@dimen/sp_text_size_12" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:scaleType="center"
            android:src="@mipmap/ic_delete"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_border_gray_shape"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:src="@mipmap/ic_password"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_pwd_hint1"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/c_999999"
            android:textSize="@dimen/sp_text_size_12" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="35dip"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dip"
                android:inputType="text"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_delete"
                android:visibility="invisible"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/psw_control"
                android:layout_width="35dip"
                android:layout_height="50dp"
                android:layout_gravity="center|right"
                android:scaleType="centerInside"
                android:src="@drawable/pwd_button_selector"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tvRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/dp_30"
            android:text="@string/register_now"
            android:textColor="@color/c_0095D9" />

        <TextView
            android:id="@+id/tvForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_23"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dp_30"
            android:text="@string/forget_the_password"
            android:textColor="@color/c_0095D9"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_corner_bt_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1.0"
        android:gravity="center|bottom"
        android:paddingBottom="20dp"
        android:text="@string/comment_support"
        android:textColor="@color/c_999999"
        android:textSize="@dimen/sp_text_size_12"
        android:visibility="visible" />


</LinearLayout>
